tests/ast-grep/fail/src/domain/statement_flow.cts
const renderCommonStatus = (value: unknown) => {
    try {
        return String(value);
    } catch {
        throw new Error('unreachable');
    }
};

module.exports = { renderCommonStatus };
